@@ -78,6 +78,7 @@ AM_GLIB_GNU_GETTEXT
 GETTEXT_PACKAGE=$PACKAGE
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["${GETTEXT_PACKAGE}"], [gettext domain])
+IT_PROG_INTLTOOL([0.35.0])
 
 dnl AM_MAINTAINER_MODE
 
